# apple-sub-validator

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  apple_subscription_validator.py  interactive_validator.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  validate_from_file.py
